from typing import AsyncIterator, Protocol
from src.core.entities import Asset, Exchange, Coin, Ticker


class IExchange(Protocol):
    async def buy(self, asset: "Ticker"): ...
    async def sell(self, asset: "Ticker"): ...
    async def transfer(self, asset: "Asset", destination: "Exchange"): ...
    async def subscribe_balance(self, coins: list["Coin"]) -> AsyncIterator["Asset"]: ...
    async def subscribe_price(self, coins: list["Coin"]) -> AsyncIterator["Ticker"]: ...
    async def launch(self): ...
    async def stop(self): ...