from typing import AsyncIterator, Protocol

from .exchange import IExchange

class IManager(Protocol):
    def __init__(self, ex: "IExchange") -> None: ...
    async def launch(self): ...
    async def stop(self): ...
